<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ungu"
    tools:context="com.lihat_lihat.funenglish.materi_future">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future2"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future3"
                android:textColor="@color/putih"/>
            <com.google.android.gms.ads.AdView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/Adview"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner2"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
