<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ungu"
    tools:context="com.lihat_lihat.funenglish.past_tense">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/quis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="16sp"
                android:textColor="@color/putih"
                android:textStyle="bold|normal"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_a"
                    android:id="@+id/pilihA"
                    android:textStyle="normal"
                    android:textColor="@color/putih"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_b"
                    android:id="@+id/pilihB"
                    android:textStyle="normal"
                    android:textColor="@color/putih"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_c"
                    android:id="@+id/pilihC"
                    android:textStyle="normal"
                    android:textColor="@color/putih"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_d"
                    android:id="@+id/pilihD"
                    android:textStyle="normal"
                    android:textColor="@color/putih"/>
                <ImageView
                    android:layout_marginTop="70dp"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/dua"/>
            </RadioGroup>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="60dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:layout_alignParentBottom="true"
                    android:onClick="next"
                    android:background="@color/tosca"/>
                <com.google.android.gms.ads.AdView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/Adview"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/Banner"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">
                </com.google.android.gms.ads.AdView>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
