<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ungu"
    tools:context="com.lihat_lihat.funenglish.materi_past">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_past_tense"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past2"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past3"
                android:textColor="@color/putih"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.gms.ads.AdView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/Adview"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner2"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">

                </com.google.android.gms.ads.AdView>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
