<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lihat_lihat.funenglish.kuis"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/ungu">

    <Button
        android:id="@+id/grammer"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/grammer" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grammer"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal|bold"/>
    <Button
        android:id="@+id/kalimat"
        android:onClick="kuis"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/kalimat" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenses"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal|bold"/>
    <Button
        android:id="@+id/gambar"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/picture" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="normal|bold"/>

</LinearLayout>
