<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ungu"
    tools:context="com.lihat_lihat.funenglish.gramar">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="16dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="350dp"
                android:layout_height="119dp"
                android:src="@drawable/backsatu"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <Button
                        android:onClick="kata"
                        android:id="@+id/kata"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/kata" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grammer"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="normal|bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <Button
                        android:onClick="bacaan"
                        android:id="@+id/read"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/reading" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reading"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="normal|bold"/>

                </LinearLayout>


            </LinearLayout>
            <com.google.android.gms.ads.AdView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/Adview"
                ads:adSize="BANNER"
                ads:adUnitId="@string/Banner"
                android:layout_gravity="center"
                ></com.google.android.gms.ads.AdView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
